Fix button mobile margin

--- a/src/scss/smartphonePL.scss
+++ b/src/scss/smartphonePL.scss
@@ -23,7 +23,7 @@ p {
 
 .btn {
     font-size: 0.8em;
-    padding: 0.2em;
+    margin: 0.2em 0;
 }
 
    /* Section Layout & Styling */
